--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,9 +1,12 @@
 server:
   port: 3333
 
+app-config:
+  caminho-upload: .../resources/uploads
+
 spring:
   data:
-    mongodb.uri: mongodb+srv://oministack:oministack@database-lqnos.mongodb.net/aircncSpring?retryWrites=true&w=majority
+    mongodb.uri: mongodb+srv:...
 
 
 
